# hackathon-II-todo-app

./: README.md
phase-1/: CLAUDE.md  DELIVERABLES_CHECK.md  PHASE_I_COMPLETE.md  PHASE_I_SUMMARY.md  PLANNING_COMPLETE.md  PROJECT_STRUCTURE.md  README.md  RUNNING_INSTRUCTIONS.md  TASKS_COMPLETE.md  main.py  pyproject.toml  requirements.txt  setup.py  start_todo.py  test_phase1_basic.py
phase-1/.claude/: settings.local.json
phase-1/.specify/memory/: constitution.md
phase-1/specs/todo-evolution/: plan.md  spec.md  tasks.md
phase-1/specs/todo-phase1/: plan.md  quickstart.md  research.md  spec.md  tasks.md
phase-1/specs/todo-phase1/checklists/: requirements.md
phase-1/src/: __main__.py
phase-1/src/cli/: todo_cli.py
phase-1/src/models/: task.py
phase-1/src/services/: task_service.py
phase-1/todolist/: __main__.py  cli.py  storage.py  todo_data.py
phase-2/: .gitignore  AGENTS.md  CLAUDE.md  dev.ps1  docker-compose.yml  todo.db
phase-2/.claude/: settings.local.json
phase-2/.specify/memory/: constitution.md
phase-2/.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
phase-2/backend/: CLAUDE.md  auth.py  db.py  main.py  models.py  requirements.txt
phase-2/backend/routes/: tasks.py
phase-2/frontend/: CLAUDE.md  package-lock.json  package.json
phase-2/frontend/app/: globals.css  layout.tsx  page.tsx
phase-2/frontend/components/: Auth.tsx  TaskList.tsx
phase-2/frontend/lib/: api.ts  auth-client.ts  auth.ts
phase-2/specs/: architecture.md
phase-2/specs/api/: mcp-tools.md  (+1 more)
specs/001-fix-better-auth-session/: spec.md
(+19 files in other folders)
