[project]
name = "todo-cli-app"
version = "0.1.0"
description = "A menu-driven CLI todo application"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Author", email = "author@example.com" }
]

[project.scripts]
todo-cli = "main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]